--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta charset="utf-8" />
-	<title>Web Audio Playground</title>
+	<title>MyOwnDJ</title>
 
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Droid+Serif:400italic" />
