--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<nav id="nav">
 			<ul id="controls" class="container">
 				<li>
-					<a href="#">Add Audio Source</a>
+					<a href="#" style="font-family:Comic Sans MS">Add Audio Source</a>
 					<div class="sub-menu">
 						<ul>
 							<li><a href="#" id="cabs">Audio Buffer Source</a></li>
