--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<nav id="nav">
 			<ul id="controls" class="container">
 				<li>
-					<a href="#" style="font-family:Comic Sans MS;font-size:25pt">Add Audio Source</a>
+					<a href="#" style="font-family:Comic Sans MS">Add Audio Source</a>
 					<div class="sub-menu">
 						<ul>
 							<li><a href="#" id="cabs">Audio Buffer Source</a></li>
@@ -39,7 +39,7 @@
 					</div>	
 				</li>
 				<li>
-					<a href="#">Add Module</a>
+					<a href="#" style="font-family:Comic Sans MS">Add Module</a>
 					<div class="sub-menu">
 						<ul>
 							<li><a href="#" id="cbqf">Biquad Filter</a></li>
