--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 <body>
 	<div id="main" class="container">
-		<header id="header">
+		<header id="header"> 
+		<a> HELLO WHERE DOES THIS GO</a>
 		</header>
 		<nav id="nav">
 			<ul id="controls" class="container">
