--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
 	<div id="main" class="container">
 		<header id="header"> 
+		<a style="font-size:24pt"><strong>HELLO WORLD</strong></a>
 		</header>
 		<nav id="nav">
-		<a>HELLO WORLD</a>
 			<ul id="controls" class="container">
 				<li>
 					<a href="#" style="font-family:Comic Sans MS">Add Audio Source</a>
