--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta charset="utf-8" />
-	<title>MyOwnDJ</title>
+	<title>Web Audio Playground</title>
 
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Droid+Serif:400italic" />
@@ -22,12 +22,12 @@
 </head>
 <body>
 	<div id="main" class="container">
-		<header id="header"> 
+		<header id="header">
 		</header>
 		<nav id="nav">
 			<ul id="controls" class="container">
 				<li>
-					<a href="#" style="font-family:Comic Sans MS">Add Audio Source</a>
+					<a href="#">Add Audio Source</a>
 					<div class="sub-menu">
 						<ul>
 							<li><a href="#" id="cabs">Audio Buffer Source</a></li>
@@ -39,7 +39,7 @@
 					</div>	
 				</li>
 				<li>
-					<a href="#" style="font-family:Comic Sans MS">Add Module</a>
+					<a href="#">Add Module</a>
 					<div class="sub-menu">
 						<ul>
 							<li><a href="#" id="cbqf">Biquad Filter</a></li>
