Actually working commit

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 <body>
 	<div id="main" class="container">
 		<header id="header">
+			<img src="img/djlogo.png"/>
 		</header>
 		<nav id="nav">
+		
 			<ul id="controls" class="container">
 				<li>
 					<a href="#">Add Audio Source</a>
