Final commit(hopefully)

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 		<section id="modules" class="container">
 
 		</section>
-	<div class="link">WebAudio Code available on <a href="https://github.com/cwilso/WebAudio">GitHub</a>.</div>
+	<div class="link">
+	<p id = "nameOfSong">"Levels"</p>
+	WebAudio Code available on <a href="https://github.com/cwilso/WebAudio">GitHub</a>.</div>
 	</div> <!-- /#main -->
 
 	<div id="output" class="destination">
